deploy/platform/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
    - host: kiali.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port: { number: 20001 }
